bzr-builddeb (0.14) unstable; urgency=low

  * Compatible with bzr 0.14.
  * Drop the silly restriction on only invoking the command from the root
    of a branch.
  * Add support for non-native full source packages. To do this, just
    have orig-dir pointing to the dir containing the upstream tarballs.
    This involves a change in behaviour I am afraid. Native packages are
    now not the default, so if you have one echo 'native = True' to
    global.conf.

 -- James Westby <jw+debian@jameswestby.net>  Sat, 13 Jan 2007 21:55:04 +0000

bzr-builddeb (0.13) unstable; urgency=low

  * New release. 
  * Comptible with bzr 0.13.

 -- James Westby <jw+debian@jameswestby.net>  Wed, 20 Dec 2006 00:22:18 +0000

bzr-builddeb (0.11) unstable; urgency=low

  * Initial Release. (Closes: #380198)

 -- James Westby <jw+debian@jameswestby.net>  Thu,  3 Aug 2006 19:16:22 +0100